2003-10-24 Ben Maurer  <bmaurer@users.sourceforge.net>

	* DataGridCommandEventArgs.cs: typo, cmdSrc was becoming origionalArgs.

2003-10-23 Ben Maurer  <bmaurer@users.sourceforge.net>

	* Calendar.cs: render the next month button so that aligns to the
	right.

2003-10-23  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* BaseCompareValidator.cs: splitted Convert. Fixed bug #49927. The fix
	was just changing && by || after the first Match.

2003-10-23  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Calendar.cs: apply header style in RenderHeader. Fixes bug #49144.
	Patch by Yaron Shkop.

2003-10-22  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* DataGrid.cs: applied patch from Yaron Shkop (yaronsh@mainsoft.com)
	that fixes bug #49744. Now the selection doesn't lose its data.

2003-10-21 Ben Maurer  <bmaurer@users.sourceforge.net>

	* EditCommandColumn.cs: Implement; fix #49736

2003-10-21 Ben Maurer  <bmaurer@users.sourceforge.net>

	* ButtonColumn.cs: Use the DataGridLinkButton, so that we inherit
	the forground color. bug #49738

2003-10-19  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Calendar.cs: fixed bug #49727.

2003-10-18 Ben Maurer  <bmaurer@users.sourceforge.net>

	* TableStyle.cs: fix #49740.

2003-10-19  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* SelectedDatesCollection.cs: fix by Yaron for bug #49698.
	* ValidationSummary.cs: fixes bug #49669.

2003-10-11  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Calendar.cs: apply the calendar style to the new Table, not to itself.
	Fixes #49406.

	* CheckBox.cs: render the hidden fields if AutoPostBack.

	* Style.cs: don't render empty width/height. Small improvement in
	CopyFrom.

	* Table.cs: fixed condition for border width.

	* TableStyle.cs:
	(CopyFrom): always call the base class to copy other attributes. Fixes
	bug #49408. Don't render empty 'rules' attribute.

	* WebControl.cs: track viewstate when enabled. Don't overwrite source
	control attributes in CopyBaseAttributes.
